--- a/contact/index.html
+++ b/contact/index.html
@@ -279,6 +279,11 @@
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="../mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
         </div>
+        <a href="" id="scrollButton" class="text-3xl">
+            <span id="scrollIcon" class="transition-top h-11 w-11 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-full hidden sm:flex justify-center items-center fixed right-12 bottom-8 border-2 border-flashDanna z-50 opacity-0 transition-all duration-300 ease-in-out transition-scale hover:scale-105 hover:border-fontDanna">
+                <img src="../assets/images/icon/arrow-down-short.svg" alt="chevron-up" class="w-8 rotate-180">
+            </span>
+        </a>
         <!-------- 
         | LOADER |
          -------->
