--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         | BANNER |
          ------->
         <section id="banner">
-            <div class="bg-banner-home bg-center bg-cover">
-                <div class="relative text-center pt-40 pb-56 sm:top-36 sm:pt-20 sm:pb-80 lg:top-24">
+            <div class="bg-banner-home bg-center sm:h-[100vh] bg-cover">
+                <div class="relative text-center  pt-40 pb-56 sm:top-36 sm:pt-20 sm:pb-80 lg:pt-4 xl:top-24">
                     <h2 class="text-flashDanna text-sm font-medium font-inter sm:text-base md:text-2xl lg:text-4xl xl:text-5xl">Entrepreneur Digital</h2>
                     <h1 class="text-white text-2xl font-black text-shadow font-inter sm:text-4xl md:text-5xl lg:text-7xl xl:text-8xl">Façonnons votre <br><span ><span id="dynamic-word" class="slide-in inline-block text-fontDanna">avenir</span> numérique</span></h1>
                     <h1 class="mb-2">
@@ -101,7 +101,7 @@
                     <div class=" my-5 mx-auto text-gray-100 font-inter border border-black font-medium shadow-md w-40 p-2 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-md transition-all duration-200 delay-75  hover:scale-110 hover:text-white ease-in-out lg:text-xl lg:p-3 lg:my-9 lg:w-72">
                         <a href="contact/">Contactez-nous</a>
                     </div>
-                    <div class="absolute bottom-6 left-1/2 -translate-x-1/2 md:bottom-10 lg:bottom-28">
+                    <div class="absolute  left-1/2 -translate-x-1/2">
                         <a href="#propos" class="animate-bounce bg-gradient-to-r from-bodyDanna to-navDanna border border-gray-400 p-2 w-12 h-12 ring-1 ring-slate-900/5 shadow-lg rounded-full flex items-center justify-center sm:w-16 sm:h-16 ">
                           <svg class="w-6 h-6 text-flashDanna sm:w-8 " fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                             <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
@@ -198,16 +198,16 @@
         | DÉROULEMENT |
          ------------>
          <section id="deroulement">
-            <div class="py-3 ">
-                <h2 class="md:px-8 px-5">
+            <div class="py-3 px-5">
+                <h2 class="">
                     <span class="block font-hurricane text-flashDanna font-extralight text-shadow text-3xl sm:text-7xl lg:text-8xl">Déroulement d'un projet</span>
-                    <span class="block text-gray-300 font-semibold mdtext-sm text-xs">Explorez les différentes étapes qui jalonnent notre processus de projet,<br> garantissant un résultat exceptionnel.</span>
+                    <span class="block text-gray-300 font-semibold md:text-sm text-xs">Explorez les différentes étapes qui jalonnent notre processus de projet,<br> garantissant un résultat exceptionnel.</span>
                 </h2>
-                <p class="text-flashDanna font-semibold text-xs mt-4 flex items-center space-x-3 px-5">
+                <p class="text-flashDanna font-semibold text-xs mt-4 flex items-center space-x-3">
                     <span>Faites défiler horizontalement pour voir toute les étapes.</span>
                     <img class="w-6" src="assets/images/icon/arrow-left-right.svg" alt="Fleche gauche - droite">
                 </p>
-                <div class="flex overflow-x-auto snap-x space-x-4 py-4 px-5 mx-4 hide-scrollbar os-host">
+                <div class="flex overflow-x-auto snap-mandatory snap-x space-x-4 py-4 px-5 mx-3 hide-scrollbar os-host">
                     <div class="rounded-md flex-shrink-0 snap-center sm:p-8">
                         <div class="group flex flex-col items-center justify-center gap-2 text-center rounded-xl overflow-hidden before:scale-95 before:w-56 before:h-[328px] before:rounded-t-xl before:rounded-b-xl before:content-[''] before:bg-gradient-to-bl from-fontDanna via-bodyDanna to-navDanna before:absolute before:-top-1 w-56 h-80 relative bg-gray-300 sm:w-72 sm:h-80 sm:before:hover:scale-95 sm:before:hover:h-[410px] sm:before:hover:w-[365px] sm:before:hover:rounded-b-2xl sm:before:transition-all sm:before:duration-500 sm:before:w-80 sm:before:h-40">
                             <div class="flex justify-center items-center text-4xl font-bold w-20 h-20 bg-fontDanna mt-1 rounded-full border-4 scale-150 -translate-x-[70px] -translate-y-8 text-white border-gray-300 z-10 sm:w-28 sm:h-28 sm:group-hover:scale-150 sm:group-hover:-translate-x-20  sm:group-hover:-translate-y-14 sm:transition-all sm:duration-500 sm:scale-100 sm:-translate-x-0 sm:-translate-y-0 md:text-5xl">01</div>
@@ -310,24 +310,24 @@
                         </li>
                         <li class="py-2">
                             <div class="flex space-x-4 mb-4">
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                     <a href="" class="">
-                                        <img src="assets/images/icon/facebook.svg" alt="facebook" class="w-5">
+                                        <img src="assets/images/icon/facebook.svg" alt="facebook" class="w-4">
                                     </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="assets/images/icon/instagram.svg" alt="instagram" class="w-5">
+                                    <img src="assets/images/icon/instagram.svg" alt="instagram" class="w-4">
                                 </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="assets/images/icon/linkedin.svg" alt="linkedin" class="w-5">
+                                        <img src="assets/images/icon/linkedin.svg" alt="linkedin" class="w-4">
                                     </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="assets/images/icon/twitter-x.svg" alt="twitter" class="w-5">
+                                    <img src="assets/images/icon/twitter-x.svg" alt="twitter" class="w-4">
                                 </a>
                                 </div>
                             </div>
@@ -362,9 +362,9 @@
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
         </div>
-        <a href="#" class="" id="scrollButton">
-            <span id="scrollIcon">
-                <i class="bi bi-chevron-up" style="color: var(--color-flash);"></i>
+        <a href="" id="scrollButton" class="text-3xl">
+            <span id="scrollIcon" class="transition-top h-11 w-11 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-full hidden sm:flex justify-center items-center fixed right-12 bottom-8 border-2 border-flashDanna z-50 opacity-0 transition-all duration-300 ease-in-out transition-scale hover:scale-105 hover:border-fontDanna">
+                <img src="../assets/images/icon/arrow-down-short.svg" alt="chevron-up" class="w-8 rotate-180">
             </span>
         </a>
         <!-------- 
