--- a/services/index.html
+++ b/services/index.html
@@ -112,9 +112,9 @@
                 </h1>
             </div>
             <div class="max-w-2xl mx-auto mt-8 px-4 py-8 lg:max-w-7xl grid grid-cols-1 gap-y-10 gap-x-8 sm:grid-cols-2 lg:grid-cols-3">
-                <div class="bg-navDanna shadow-lg rounded-lg mx-auto w-56 group sm:w-auto">
+                <div class="bg-navDanna shadow-lg rounded-lg mx-auto group sm:w-auto">
                     <div class="overflow-hidden rounded-t-lg">
-                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703689132/crea-site.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-100">
+                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703689132/crea-site.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-125">
                     </div>
                     <div class="p-4">
                         <div class="mb-1">
@@ -123,9 +123,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-navDanna shadow-lg rounded-lg mx-auto w-56 group sm:w-auto">
+                <div class="bg-navDanna shadow-lg rounded-lg mx-auto group sm:w-auto">
                     <div class="overflow-hidden rounded-t-lg">
-                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692143/analyse-google.jpg" alt="Étude de projet" class="max-h-56 bg-cover bg-center rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-100">
+                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692143/analyse-google.jpg" alt="Étude de projet" class="max-h-56 bg-cover bg-center rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-125">
                     </div>
                     <div class="p-4">
                         <div class="mb-1">
@@ -134,9 +134,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-navDanna shadow-lg rounded-lg mx-auto w-56 group sm:w-auto">
+                <div class="bg-navDanna shadow-lg rounded-lg mx-auto group sm:w-auto">
                     <div class="overflow-hidden rounded-t-lg">
-                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692144/shop-online.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-100">
+                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692144/shop-online.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-125">
                     </div>
                     <div class="p-4">
                         <div class="mb-1">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-navDanna shadow-lg rounded-lg mx-auto w-56 group sm:w-auto">
+                <div class="bg-navDanna shadow-lg rounded-lg mx-auto group sm:w-auto">
                     <div class="overflow-hidden rounded-t-lg">
                         <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692181/responsive.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-100">
                     </div>
@@ -156,9 +156,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-navDanna shadow-lg rounded-lg mx-auto w-56 group sm:w-auto">
+                <div class="bg-navDanna shadow-lg rounded-lg mx-auto group sm:w-auto">
                     <div class="overflow-hidden rounded-t-lg">
-                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692148/maintenance.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-100">
+                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692148/maintenance.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-125">
                     </div>
                     <div class="p-4">
                         <div class="mb-1">
@@ -167,9 +167,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-navDanna shadow-lg rounded-lg mx-auto w-56 group sm:w-auto">
+                <div class="bg-navDanna shadow-lg rounded-lg mx-auto group sm:w-auto">
                     <div class="overflow-hidden rounded-t-lg">
-                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692144/design-ux.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-100">
+                        <img src="https://res.cloudinary.com/dilp6xqmb/image/upload/v1703692144/design-ux.jpg" alt="Étude de projet" class="max-h-56 rounded-t-lg scale-150 transition-all duration-150 group-hover:scale-125">
                     </div>
                     <div class="p-4">
                         <div class="mb-1">
@@ -217,24 +217,24 @@
                         </li>
                         <li class="py-2">
                             <div class="flex space-x-4 mb-4">
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="../assets/images/icon/facebook.svg" alt="facebook" class="w-5">
+                                        <img src="../assets/images/icon/facebook.svg" alt="facebook" class="w-4">
                                     </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="../assets/images/icon/instagram.svg" alt="instagram" class="w-5">
+                                    <img src="../assets/images/icon/instagram.svg" alt="instagram" class="w-4">
                                 </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="../assets/images/icon/linkedin.svg" alt="linkedin" class="w-5">
+                                        <img src="../assets/images/icon/linkedin.svg" alt="linkedin" class="w-4">
                                     </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="../assets/images/icon/twitter-x.svg" alt="twitter" class="w-5">
+                                    <img src="../assets/images/icon/twitter-x.svg" alt="twitter" class="w-4">
                                 </a>
                                 </div>
                             </div>
@@ -269,6 +269,11 @@
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="../mentions-legales/" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
         </div>
+        <a href="" id="scrollButton" class="text-3xl">
+            <span id="scrollIcon" class="transition-top h-11 w-11 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-full hidden sm:flex justify-center items-center fixed right-12 bottom-8 border-2 border-flashDanna z-50 opacity-0 transition-all duration-300 ease-in-out transition-scale hover:scale-105 hover:border-fontDanna">
+                <img src="../assets/images/icon/arrow-down-short.svg" alt="chevron-up" class="w-8 rotate-180">
+            </span>
+        </a>
         <!-------- 
         | LOADER |
          -------->
