--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -173,24 +173,24 @@
                         </li>
                         <li class="py-2">
                             <div class="flex space-x-4 mb-4">
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="../assets/images/icon/facebook.svg" alt="facebook" class="w-5">
+                                        <img src="../assets/images/icon/facebook.svg" alt="facebook" class="w-4">
                                     </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="../assets/images/icon/instagram.svg" alt="instagram" class="w-5">
+                                    <img src="../assets/images/icon/instagram.svg" alt="instagram" class="w-4">
                                 </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                     <a href="">
-                                        <img src="../assets/images/icon/linkedin.svg" alt="linkedin" class="w-5">
+                                        <img src="../assets/images/icon/linkedin.svg" alt="linkedin" class="w-4">
                                     </a>
                                 </div>
-                                <div class="w-10 h-10 rounded-full flex justify-center items-center transition duration-200 hover:scale-110 hover:bg-bodyDanna">
+                                <div class="w-10 h-10 rounded-full flex justify-center border-2 border-flashDanna items-center transition duration-200 hover:scale-110 hover:border-fontDanna hover:bg-bodyDanna">
                                 <a href="">
-                                    <img src="../assets/images/icon/twitter-x.svg" alt="twitter" class="w-5">
+                                    <img src="../assets/images/icon/twitter-x.svg" alt="twitter" class="w-4">
                                 </a>
                                 </div>
                             </div>
@@ -225,6 +225,11 @@
         <div class="py-4 w-full text-center">
             <p class="font-extralight text-xs text-gray-100 sm:text-base">&nbsp;Copyright&nbsp;&copy;&nbsp;DannaCode <script>document.write(new Date().getFullYear())</script> - <a href="" class="text-gray-400 transition duration-100 ease-in-out hover:text-gray-100">Mentions légales</a></p>
         </div>
+        <a href="" id="scrollButton" class="text-3xl">
+            <span id="scrollIcon" class="transition-top h-11 w-11 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-full hidden sm:flex justify-center items-center fixed right-12 bottom-8 border-2 border-flashDanna z-50 opacity-0 transition-all duration-300 ease-in-out transition-scale hover:scale-105 hover:border-fontDanna">
+                <img src="../assets/images/icon/arrow-down-short.svg" alt="chevron-up" class="w-8 rotate-180">
+            </span>
+        </a>
         <!-------- 
         | LOADER |
          -------->
