--- a/contact/index.html
+++ b/contact/index.html
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="cta-striper-contact order-2 lg:order-1 lg:w-1/2">
-                <h2 class="py-3 px-4 mb-3 leading-4">
+                <h2 class="py-3 px-4 mb-3 leading-4 lg:pt-20">
                     <span class="text-gray-50 font-black text-lg lg:text-xl xl:text-3xl">Prêt à discuter de vos besoins ?</span>
                     <span class="block text-gray-400 font-light text-xs lg:text-sm xl:text-base">Planifions ensemble une rencontre pour explorer comment je peux vous assister au mieux. Remplissez le formulaire ci-dessous pour fixer un rendez-vous.</span>
                 </h2>
