--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="keywords" content="Conception de sites web, Site vitrine, Site e-commerce, Landing page, Application web, Espace membre, Génération de leads, Maintenance web, Référencement SEO, Développement web, Web design, Expérience utilisateur (UX), Interface utilisateur (UI),Création digitale, Stratégie web, Solutions numériques, Optimisation de site, Réactivité mobile, Design moderne, Performance web">
         <meta name="theme-color" content="#06373A" />
         <!-- TailwindCSS -->
-        <link rel="stylesheet" href="assets/dist/style.css">      
+        <link rel="stylesheet" href="assets/dist/style.css">
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/images/Logo.png" />
         <link rel="icon" type="image/png" sizes="32x23" href="assets/images/Logo.png" />
@@ -194,6 +194,39 @@
                 </div>
             </div>
          </section>
+         <!-- CAROUSEL -->
+         <section class=" bg-navDanna border-y border-gray-500 py-1 px-0 text-sm font-medium mx-auto">
+            <div id="carousel" class="overflow-hidden overflow-x-auto touch-none flex duration-75 hide-scrollbars px-5 mx-auto max-w-4xl bg-navDanna">
+                <div class="flex mx-auto swiper-wrapper  space-x-20 py-5 items-center">
+                    <div class="swiper-slide flex-initial snap-x snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">HTML</h4>
+                      <!-- <img src="assets/images/Logo.png" class="w-16"/> -->
+                    </div>
+                    <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">CSS</h4>
+                    </div>
+                    <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">JavaScript</h4>
+                      </div>
+                      <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">Ruby</h4>
+                      </div>
+                      <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">Ruby On Rails</h4>
+                      </div>
+                      <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">React</h4>
+                      </div>
+                      <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">TailwindCSS</h4>
+                      </div>
+                      <div class="swiper-slide flex-initial snap-start flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">PostgreSQL</h4>
+                      </div>
+                </div>
+              </div>
+        </section>
+
          <!----------- 
         | DÉROULEMENT |
          ------------>
