Nos differents outils

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
          </section>
          <!-- CAROUSEL -->
          <section class=" bg-navDanna border-y border-gray-500 py-1 px-0 text-sm font-medium mx-auto">
-            <h1 class="text-center text-gray-100 text-lg">Ma bite et mon couteau</h1>
+            <h1 class="text-center text-gray-100 font-medium text-lg uppercase">Nos différents outils</h1>
             <div id="carousel" class="overflow-hidden overflow-x-auto touch-none flex duration-500 ease-in-out hide-scrollbars px-5 mx-auto max-w-4xl bg-navDanna">
                 <div class="flex mx-auto swiper-wrapper  space-x-20 py-5 items-center">
                     <div class="swiper-slide flex-initial snap-x snap-center flex-shrink-0">
@@ -208,22 +208,28 @@
                     </div>
                     <div class="swiper-slide flex-initial snap-center flex-shrink-0">
                         <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">JavaScript</h4>
-                      </div>
-                      <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">PHP</h4>
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
                         <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">Ruby</h4>
-                      </div>
-                      <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
                         <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">Ruby On Rails</h4>
-                      </div>
-                      <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
                         <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">React</h4>
-                      </div>
-                      <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
                         <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">TailwindCSS</h4>
-                      </div>
-                      <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
+                        <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">Bootstrap</h4>
+                    </div>
+                    <div class="swiper-slide flex-initial snap-center flex-shrink-0">
                         <h4 class="bg-clip-text text-transparent bg-gradient-to-r from-font2Danna to-flashDanna font-black text-2xl">PostgreSQL</h4>
-                      </div>
+                    </div>
                 </div>
               </div>
         </section>
