--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr"  class="scroll-smooth">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -143,7 +143,7 @@
                     <span class="text-gray-50 font-black text-lg lg:text-xl xl:text-3xl">Prêt à discuter de vos besoins ?</span>
                     <span class="block text-gray-400 font-light text-xs lg:text-sm xl:text-base">Planifions ensemble une rencontre pour explorer comment je peux vous assister au mieux. Remplissez le formulaire ci-dessous pour fixer un rendez-vous.</span>
                 </h2>
-                <form name="DannaForm" onsubmit="return validateForm()" id="contact-form" class="border border-flashDanna rounded mt-5 mx-3 py-4 bg-navDanna" method="post" action="" role="form">
+                <form name="DannaForm" onsubmit="return validateForm()" id="contact-form" class="border border-flashDanna rounded my-5 mx-3 py-4 bg-navDanna" method="post" action="" role="form">
                     <div class="grid grid-cols-4 gap-x-3 mx-4">
                         <div class="col-span-2">
                             <label for="lastname" class="text-gray-50">Nom <span class="text-red-700">*</span></label>
