--- a/public/422.html
+++ b/public/422.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="scroll-smooth">
+<html lang="fr" class="scroll-smooth  h-full w-full">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
     <!-- Cookie -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
         </head>
-        <body>
+        <body class="bg-navDanna h-full w-full flex flex-col justify-between">
             <!-- Google Tag Manager (noscript) -->
             <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M355N7QB"
             height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -46,7 +46,7 @@
                 <div class="error__title">422</div>
                 <div class="error__subtitle">Hmmm...</div>
                 <div class="error__description">Nous avons rencontré un petit problème de communication avec notre serveur. <br>Il semble qu'il parle une autre langue aujourd'hui. <br> essayons de le persuader de coopérer. En attendant, explorez nos autres pages intergalactiques !</div>
-                <a class="error__button error__button--active " href=".">Retour à la page d'accueil</a>
+                <a class="error__button error__button--active " href="..">Retour à la page d'accueil</a>
             </div>
             <div class="astronaut">
                 <div class="astronaut__backpack"></div>
